--- a/src/assets/personCenter.pug
+++ b/src/assets/personCenter.pug
@@ -2,7 +2,7 @@ extends header
 block content
     .perWrap
         .perInfo.clearfix
-            .perLeft
+            .perLeft#leftApp
                 dl.listNav
                     dt(style="cursor:pointer;")
                         a(href="myAccount.html")
