--- a/src/assets/header.pug
+++ b/src/assets/header.pug
@@ -9,13 +9,26 @@ html
         link(href='../iconfont/iconfont.css',rel='stylesheet')
     body
         .container-head#headerApp
-            .approve-wrapper(style='display:none;',v-show="loginIndex=='5'")
-                h2.title 请先进行债权认证
-                .input-wrapper
-                    label 债权人姓名
-                    input(placeholder='请输入')
-                .input-inline
-                    .input-confrim-btn 确定
+            .dialog#dialogLogin(style='display:none;',v-show="loginIndex=='5'")
+                .dialog-info
+                .approve-wrapper
+                    .diaTop(style="position:absolute;top:10px;right:10px;",@click="closeAllAlertCon")
+                        img(src="../img/delete.png")
+                    h2.title 请先进行债权认证
+                    .input-wrapper
+                        label 债权人姓名
+                        input(placeholder='请输入',:class="{'validate-color':!validatorApprove.name}",v-model="approveInfo.name",@blur="validatorApprove.name=/^\\S+/.test(approveInfo.name)")
+                    .input-wrapper
+                        label 债权人电话
+                        input(placeholder='请输入',:class="{'validate-color':!validatorApprove.tel}",v-model="approveInfo.tel",@blur="validatorApprove.tel=/^\\S+/.test(approveInfo.tel)")
+                    .input-wrapper
+                        label 债权金额
+                        input(placeholder='请输入',:class="{'validate-color':!validatorApprove.money}",v-model="approveInfo.money",@blur="validatorApprove.money=/^\\S+/.test(approveInfo.money)")
+                    .input-wrapper
+                        label 债权编号
+                        input(placeholder='如11-10-1-0001',:class="{'validate-color':!validatorApprove.debtcode}",v-model="approveInfo.debtcode",@blur="validatorApprove.debtcode=/^\\S+/.test(approveInfo.debtcode)")
+                    .input-inline
+                        .input-confrim-btn(@click="approveMoney") 确定
             .dialog#dialogLogin(style='display:none;',v-show="loginIndex=='0'")
                 .dialog-info
                 .dia-content
@@ -35,7 +48,7 @@ html
                                 li.sign-check(style="padding-left: 124px;text-align: left")
                                     input#checkText(type='text',v-model="loginUser.code",:class="{'validate-color':!validatorLoginUser.code}",@blur="validatorLoginUser.code=/^\\S+/.test(loginUser.code)",placeholder="验证码")
                                     span.checkCode(style="background:none;")
-                                        img(style="width:100%,height:100%",@click='updatePicCode',:src="picCode")
+                                        img(style="width:100%;height:100%;",@click='updatePicCode',:src="picCode")
                                     span.notesee(@click='updatePicCode') 看不清楚，换一张
                                     span(v-show="!validatorLoginUser.code&&isShowError",style="color: #f00;") 验证码不能为空
                                 li
@@ -59,7 +72,7 @@ html
                                 li.sign-check(style="padding-left: 124px;text-align: left")
                                     input#checkText(type='text',v-model="resetUser.code",:class="{'validate-color':!validatorResetUser.code}",@blur="validatorResetUser.code=/^\\S+/.test(resetUser.code)",placeholder="验证码")
                                     span.checkCode(style="background:none;")
-                                        img(:src="picCode",style="width:100%,height:100%",@click='updatePicCode')
+                                        img(:src="picCode",style="width:100%;height:100%",@click='updatePicCode')
                                     span.notesee(@click='updatePicCode') 看不清楚，换一张
                                     span(v-show="!validatorResetUser.code&&isShowError",style="color: #f00;") 验证码不能为空
                                 li.phone-check(style="padding-left:124px;text-align:left")
@@ -90,7 +103,7 @@ html
                                 li.sign-check(style="padding-left: 124px;text-align: left")
                                     input#checkText(type='text',v-model="registerUser.code",:class="{'validate-color':!validatorRegisterUser.code}",@blur="validatorRegisterUser.code=/^\\S+/.test(registerUser.code)",placeholder="验证码")
                                     span.checkCode(style="background:none;")
-                                        img(:src="picCode",style="width:100%,height:100%",@click='updatePicCode')
+                                        img(:src="picCode",style="width:100%;height:100%",@click='updatePicCode')
                                     span.notesee(@click='updatePicCode') 看不清楚，换一张
                                     span(v-show="!validatorRegisterUser.code&&isShowError",style="color: #f00;") 验证码不能为空
                                 li.phone-check(style="padding-left:124px;text-align:left")
@@ -138,6 +151,7 @@ html
         block content 
         script(src="../js/jquery.js",type="text/javascript")
         script(src="../layer/layer.js",type="text/javascript")
+        script(src="../js/MD5.js",type="text/javascript")
         script(src="../common/layui/layui.js",type="text/javascript")
         footer(style="display:none;")
             .foot-serve
