--- a/src/assets/order.pug
+++ b/src/assets/order.pug
@@ -1,9 +1,11 @@
 extends header
 block content
-    div#app
+    link(rel="stylesheet", type="text/css", href="../css/saved_resource")  
+    link(rel="stylesheet", type="text/css", href="../css/saved_resource(1)")
+    div
         .wd-nav-area-bg
             ul.wd-nav-area
-                - var navlist=[{id:'category',name:'全部分类'},{id:'111',name:'首页'},{id:'food',name:'美食'}];
+                - var navlist=[{id:'category',name:'确认订单'},{id:'111',name:'支付方式'}];
                 each item,index in navlist
                     if index==0
                         li.all-category
@@ -15,34 +17,82 @@ block content
                                         p 
                                             a 精选品牌
                                             a 小吃快餐
-                                block menulist
-                                block menulist
-                                block menulist
-                                block menulist
                     else 
                         li
-                            a(href='\##{item.id}') #{item.name}
-        .goods-wrapper-bg
-            ul.goods-wrapper
-                li.bz
-                li.order-name 订单结算
-                li.goodslist-wrapper 
-                    dl.goodslist
-                        dt
-                            img(src="./img/test.png")
-                        dd 商品名称
-                    dl.goodslist
-                        dt
-                            img(src="./img/test.png")
-                        dd 商品名称
-                    dl.goodslist
-                        dt
-                            img(src="./img/test.png")
-                        dd 商品名称
-                li.username(v-text="goodsDetai.name")  
-                    | 自取
-                li.handle-order 
-                    span.color-red $
-                    span.color-red(v-text="goodsDetai.total_amount")
-                    span.btn-small(@click="createOrder") 确认订单
+                            a(href='#') #{item.name}
+        header#site-mast.site-mast
+            #J-site-mast__branding.site-mast__branding.cf
+                a.site-logo(href="javascript:;", gaevent="header/logo")
+                    img(src="", alt="郑州团购", width="82px", height="54px")
+                    |   
+                    |         
+                #yui_3_16_0_1_1491961516124_63.component-buyprocessbar.mt-component--booted(data-component="buyprocessbar")
+                    .buy-process-bar-container
+                        ol.buy-process-desc.steps-desc
+                            li.step.current(style="width:33.333333333333%") 1. 提交订单
+                            |         
+                            li.step(style="width:33.333333333333%") 2. 选择支付方式
+                            |         
+                            li.step(style="width:33.333333333333%") 3. 购买成功
+                            |     
+                        .progress
+                            .progress-bar(style="width:33.333333333333%")
+        #app.bdw
+            #bd.cf
+                form#deal-buy-form.common-form.form.J-wwwtracker-form.mt-component--booted(action="", method="post")
+                    .table-section.summary-table
+                        table#yui_3_16_0_1_1491961516124_545.buy-table(cellspacing="0")
+                            tbody#yui_3_16_0_1_1491961516124_544
+                                tr.order-table-head-row
+                                    th.desc 商品
+                                    |             
+                                    th.unit-price 单价
+                                    |             
+                                    th.amount 数量
+                                    |             
+                                    th.col-total 总价
+                                    |         
+                                tr#yui_3_16_0_1_1491961516124_543
+                                    td.desc
+                                        a(href="javascript:;", target="_blank", v-text="goodsDetai.name")
+                                    |             
+                                    td.money.J-deal-buy-price
+                                        | ¥
+                                        span#deal-buy-price(v-text="goodsDetai.total_amount")
+                                    |             
+                                    td#yui_3_16_0_1_1491961516124_542.deal-component-quantity
+                                        #yui_3_16_0_1_1491961516124_66.component-dealbuy-quantity.mt-component--booted
+                                        .dealbuy-quantity
+                                            // <button class="minus" type="button" @click="changeMoney(goodsInfo,-1)">-</button>
+                                            input.f-text.J-quantity.J-cart-quantity(type="text", autocomplete="off", readonly="", maxlength="4", :value="1")
+                                            // <button class="item plus" type="button" @click="changeMoney(goodsInfo,1)">+</button>
+                                    |             
+                                    td.money.total.rightpadding.col-total
+                                        | ¥
+                                        span#J-deal-buy-total(v-text="goodsDetai.total_amount")
+                                    |         
+                                    |         
+                                tr
+                                    td
+                                    |             
+                                    td.extra-fee.total-fee.rightpadding(colspan="3")
+                                        strong 应付金额
+                                        | ：
+                                        |                 
+                                        span.inline-block.money
+                                        | ¥
+                                        strong#deal-buy-total-t(v-text="goodsDetai.total_amount")
+                        input#J-deal-buy-cardcode(type="hidden", name="cardcode", maxlength="8", value="0")
+                        |         
+                        #yui_3_16_0_1_1491961516124_69.component-dealbuy-mobile.mt-component--booted(data-component="dealbuy-mobile")
+                            .J-common-normal-mobile(style="margin:10px 0;font-size:12px;")
+                            //
+                                <p style="">
+                                选择收货地址：
+                                <select v-model="selected">
+                                <option :value="addressItem.id" v-for="addressItem in addressArr" v-text="addressItem.address+addressItem.stand"></option>
+                                </select>
+                                </p>
+                        .form-submit
+                            input.btn.btn-large.btn-buy(type="button", @click="createOrder", name="buy", value="提交订单")
 
