--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -70,14 +70,16 @@
 .approve-wrapper{
     width: 528px;
     height: 492px;
-    display: none;
+    // display: none;
     padding-left:32px;
     position: absolute;
     left:0;
     top:0;
     right: 0;
     bottom: 0;
-    margin: 0 auto;
+    background: #fff;
+    z-index: 10;
+    margin:auto;
     h2.title{
         height: 80px;
         font-size: 20px;
