--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -20,6 +20,10 @@
         background: url(../img/detail/loading5.gif) no-repeat;
     }
 }
+.nav-color-selected{
+    background-color: #c70d1b;
+    color:#fff;
+}
 .alert-area{
     //top: 50%;
     //left: 50%;
