修改债权认证细节处理

--- a/src/assets/index.jade
+++ b/src/assets/index.jade
@@ -31,8 +31,8 @@ block content
                             span.bz
                     li.baseInfo
                         p(v-text="mainItem.nav_name")
-                        p 自取地址:
-                            span 未来路金水路向东200米
+                        p
+                            span 
                         .left-money-show ￥
                             span(v-text='mainItem.total_amount') 
                         .btn-buy(@click='goToGoodsDetail(mainItem.id)') 购买 
