--- a/src/assets/order.pug
+++ b/src/assets/order.pug
@@ -54,7 +54,7 @@ block content
                                     |         
                                 tr#yui_3_16_0_1_1491961516124_543
                                     td.desc
-                                        a(href="javascript:;", target="_blank", v-text="goodsDetai.name")
+                                        a(href="javascript:;",style="color:#c70d1b", target="_blank", v-text="goodsDetai.name")
                                     |             
                                     td.money.J-deal-buy-price
                                         | ¥
