--- a/src/assets/scss/common-table.scss
+++ b/src/assets/scss/common-table.scss
@@ -1,6 +1,13 @@
 .table-wrapper{
-	padding:26px 30px 0 22px;
+	padding:26px 30px 100px 22px;
 	background: #fff;
+	position:relative;
+	.page{
+		width: 100%;
+		position:absolute;
+		left:0;
+		bottom:0;
+	}
 }
 .offcial-table{
 	border:1px solid #e3e3e3;
@@ -25,9 +32,9 @@
 	.th{
 		border-right:1px solid #e3e3e3;
 		// width: 172px;
-		height: 74px;
+		height: 40px;
 		color:#666;
-		line-height: 74px;
+		line-height: 40px;
 		font-size:14px;
 		box-sizing: border-box;
 	}
@@ -36,8 +43,8 @@
 		font-size:14px;
 		// border-right: 1px solid #e3e3e3;
 		border-bottom:1px solid #e3e3e3;
-		height:74px;
-		line-height:44px;
+		height:40px;
+		line-height:40px;
 		color:#000;	
 		// background:#f4f4f4;
 		margin-bottom:2px;
@@ -131,3 +138,11 @@ input.w80 {
 	}
 
 }
+
+a:hover{ text-decoration:none;}
+.tcdPageCode{padding: 36px 20px;text-align: left;color: #ccc;text-align:center;font-size: 12px;}
+.tcdPageCode a{display: inline-block;height: 25px;	line-height: 25px;	padding: 0 10px;border: 1px solid #333;	margin: 0 2px;vertical-align: middle;background: #FFFFFF;color: #333;}
+.tcdPageCode a:hover{text-decoration: none;border: 1px solid gainsboro}
+.tcdPageCode a.current{display: inline-block;height: 25px;line-height: 25px;padding: 0 10px;margin: 0 2px;color: #fff;background-color: #C72D1B;	vertical-align: middle;}
+.tcdPageCode a.disabled{	display: none;height: 25px;line-height: 25px;padding: 0 10px;margin: 0 2px;	color: #000000;background: #FFFFFF;border: 1px solid #bfbfbf;vertical-align: middle;font-size: 12px;}
+
