--- a/src/assets/myAccount.pug
+++ b/src/assets/myAccount.pug
@@ -1,39 +1,42 @@
 extends personCenter
 block centerContent
     #app
-        form#bankFormWrapper.layui-form(action="", style="display: none;font-size: 12px;padding:0 10px;")
+        form#bankFormWrapper.layui-form(action="", style="display: none;font-size: 12px;padding:20px 10px;")
             .layui-form-item
                 label.layui-form-label 提现金额
-                |                 
+                                
                 .layui-input-block
-                input.layui-input(type="text", name="money", required="", lay-verify="number", placeholder="请输入标题", autocomplete="off")
-            |               
+                    input.layui-input(type="text", name="money", required="", lay-verify="number", placeholder="请输入提现金额", autocomplete="off")
+                           
             .layui-form-item
                 label.layui-form-label 银行卡
-                |                 
+                                 
                 .layui-input-block
-                select.bankListWrapper(name="card_id", lay-verify="required")
-                    option
-            |               
+                    select.bankListWrapper(name="card_id", lay-verify="required")
+                        option
+                          
             .layui-form-item
                 label.layui-form-label 支付密码
-                |                 
+                                 
                 .layui-input-block
-                input.layui-input(type="password", name="pay_pwd", required="", lay-verify="number", placeholder="请输入标题", autocomplete="off")
-            |               
+                    input.layui-input(type="password", name="pay_pwd", required="", lay-verify="number", placeholder="请输入支付密码", autocomplete="off")
+                          
             .layui-form-item
                 .layui-input-block
-                .layui-btn(lay-submit="", lay-filter="addBank") 立即提交
+                    .layui-btn(lay-submit="", lay-filter="addBank") 立即提交
         .my-baseInfo-wrapper
             .my-baseInfo-main
                 .show-all-balance-area
-                    span 当前积分:
-                    em(v-text="userOrderArr.queue_income||0") 
-                    span 当前余额:
+                    span 余额:
                     em(v-text="userOrderArr.balance||0")
-                .handle-balance-area
+                    .btn-normal(@click="outputMoney(userOrderArr)",style="background:#47A4EB;") 提现
+                    .btn-normal(@click="rechargeMoney",style="background:#FE550D;margin-right:290px;") 充值
+                    span 债权金:
+                    em(v-text="userOrderArr.queue_income||0")
+                    .btn-big(@click="obligation2Balance") 债权金转余额
+                .handle-balance-area(style="display:none;")
                     .biaozhi
-                    .btn-big(@click="obligation2Balance") 点击债权金转余额
+                    .btn-big(@click="obligation2Balance") 债权金转余额
                     .btn-normal(@click="outputMoney(userOrderArr)")
                         img(src="../img/output.png")
                         | 提现
@@ -55,3 +58,10 @@ block centerContent
                         li.th.w40(v-text="item.note")
                         li.th.w20(v-text="item.create_time")
                         li.th.w20(v-text="item.amount")
+                .page
+                    .tcdPageCode#pagecode
+                        span(v-if="currentPage==1&&pageCount>1") 上一页
+                        a(href='javascript:;',@click='prePage',v-else-if="pageCount>1") 上一页
+                        a(href="javascript:;",v-for="n in pages",@click="pageClick(n)",:class="{current:currentPage==n}",v-text="n")
+                        span(v-if="currentPage==pageCount&&pageCount>1") 下一页
+                        a.nextPage(href="javascript:;",@click="nextPage",v-else-if="pageCount>1") 下一页
