--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -73,7 +73,7 @@
 
 .approve-wrapper{
     width: 528px;
-    height: 492px;
+    height: 462px;
     // display: none;
     padding-left:32px;
     position: absolute;
@@ -119,6 +119,7 @@
         text-align: center;
     }
     .input-confrim-btn{
+        display: inline-block;
         width:210px;
         height: 50px;
         background: #c72d1b;
@@ -152,7 +153,7 @@ header{
              }
              li{
                 display:inline-block;
-
+                font-size: 16px;
              }
          }
          ul.right-menu-area{
@@ -273,8 +274,8 @@ header{
     right:224px;
     top:18px;
     img{
-        width: 192px;
-        height: 92px;
+        width: 175px;
+        height: 80px;
         overflow: hidden;
     }
 }
