--- a/src/assets/scss/personCenter.scss
+++ b/src/assets/scss/personCenter.scss
@@ -23,12 +23,18 @@
             }
             dt{
                 position: relative;
+                font-size: 16px;
                 cursor:pointer;
+                color:#f00;
+                a{
+                    color:#f00;
+                }
             }
             dd{
                 dl{
                         margin-top: 40px;
                     dd{
+                        padding-left:12px;
                         font-size: 12px;
                         color: #666;
                         margin-top: 16px;
@@ -39,7 +45,7 @@
         }
     }
     .perRight{
-        width: 992px;
+        width: 993px;
         background: #fff;
         float: left;
     }
