--- a/src/assets/order.pug
+++ b/src/assets/order.pug
@@ -1,7 +1,7 @@
 extends header
 block content
-    link(rel="stylesheet", type="text/css", href="../css/saved_resource")  
-    link(rel="stylesheet", type="text/css", href="../css/saved_resource(1)")
+    link(rel="stylesheet", type="text/css", href="../css/saved_resource.css")  
+    link(rel="stylesheet", type="text/css", href="../css/saved_resource(1).css")
     div
         .wd-nav-area-bg
             ul.wd-nav-area
