--- a/src/assets/backBuylist.pug
+++ b/src/assets/backBuylist.pug
@@ -9,16 +9,18 @@ block centerContent
                     ul.tr-th.clearfix
                         li.th.w10 序号
                         li.th.w20 商品包
-                        li.th.w20 金额
-                        li.th.w20 服务费
+                        li.th.w10 金额
+                        li.th.w10 服务费
                         li.th.w20 回购金额
+                        li.th.w20 创建时间
                         li.th.w10 状态
                     ul.tr-td.clearfix(v-for="(item,index) in queueList")
                         li.th.w10(v-text="index+1")
                         li.th.w20(v-text="item.goods_name")
-                        li.th.w20(v-text="item.goods_price")
-                        li.th.w20(v-text="item.counter_fee")
+                        li.th.w10(v-text="item.goods_price")
+                        li.th.w10(v-text="item.counter_fee")
                         li.th.w20(v-text="item.buy_back_price")
+                        li.th.w20(v-text="filterTime(item.apply_time)")
                         li.th.w10
                             span(v-show="item.status==0") 回购申请中
                             span(v-show="item.status==1") 回购完成
