--- a/src/assets/myAccount.pug
+++ b/src/assets/myAccount.pug
@@ -24,6 +24,49 @@ block centerContent
             .layui-form-item
                 .layui-input-block
                     .layui-btn(lay-submit="", lay-filter="addBank") 立即提交
+        form#pay-detail-info.layui-form(style="display: none;font-size: 12px;padding:20px 10px;")
+            .layui-form-item
+                label.layui-form-label 商品名称
+                .layui-input-inline
+                    input.layui-input(type="text",value="生活用品大礼包",readonly=true)
+                
+            .layui-form-item
+                label.layui-form-label 订单号
+                .layui-input-inline
+                    input.layui-input(type="text",readonly=true)
+            .layui-form-item
+                label.layui-form-label 交易时间
+                .layui-input-inline
+                    input.layui-input(type="text",readonly=true)
+            .layui-form-item
+                label.layui-form-label 交易流水
+                .layui-input-inline
+                    input.layui-input(type="text",readonly=true)
+            .layui-form-item
+                label.layui-form-label 使用代金券
+                .layui-input-inline
+                    input.layui-input(type="text",value="未使用代金券",readonly=true)
+            .layui-form-item
+                label.layui-form-label 交易状态
+                .layui-input-inline
+                    input.layui-input(type="text",value="成功",readonly=true)
+        form#inputmoney-detail-info.layui-form(style="display: none;font-size: 12px;padding:20px 10px;")
+            .layui-form-item
+                label.layui-form-label 充值时间
+                .layui-input-inline
+                    input.layui-input(type="text",readonly=true)
+            .layui-form-item
+                label.layui-form-label 流水号
+                .layui-input-inline
+                    input.layui-input(type="text",readonly=true)
+            .layui-form-item
+                label.layui-form-label 充值金额
+                .layui-input-inline
+                    input.layui-input(type="text",readonly=true)
+            .layui-form-item
+                label.layui-form-label 充值状态
+                .layui-input-inline
+                    input.layui-input(type="text",value='成功',readonly=true)
         .my-baseInfo-wrapper
             .my-baseInfo-main
                 .show-all-balance-area
@@ -44,7 +87,7 @@ block centerContent
                         img(src="../img/input.png")
                         | 充值
         .my-record-wrapper
-            h3.my-title
+            h3.my-title(@click="getMyRecommend")
                 span 我的记录
             .table-wrapper
                 .offcial-table
