--- a/src/assets/myAccount.pug
+++ b/src/assets/myAccount.pug
@@ -26,47 +26,33 @@ block centerContent
                     .layui-btn(lay-submit="", lay-filter="addBank") 立即提交
         form#pay-detail-info.layui-form(style="display: none;font-size: 12px;padding:20px 10px;")
             .layui-form-item
-                label.layui-form-label 商品名称
+                label.layui-form-label 名称
                 .layui-input-inline
-                    input.layui-input(type="text",value="生活用品大礼包",readonly=true)
-                
+                    input.layui-input(type="text",:value="userObj.type==3?'生活日用品商品包':'充值'")
             .layui-form-item
                 label.layui-form-label 订单号
                 .layui-input-inline
-                    input.layui-input(type="text",readonly=true)
+                    input.layui-input(type="text",:value="orderObj.order_id")
             .layui-form-item
-                label.layui-form-label 交易时间
+                label.layui-form-label 时间
                 .layui-input-inline
-                    input.layui-input(type="text",readonly=true)
+                    input.layui-input(type="text",:value="filterTime(orderObj.time)")
+            .layui-form-item
+                label.layui-form-label 金额
+                .layui-input-inline
+                    input.layui-input(type="text",:value="orderObj.money")
             .layui-form-item
                 label.layui-form-label 交易流水
                 .layui-input-inline
-                    input.layui-input(type="text",readonly=true)
-            .layui-form-item
+                    input.layui-input(type="text",:value="trade_no||''")
+            .layui-form-item(style="display:none;",v-show="userObj.type==3")
                 label.layui-form-label 使用代金券
                 .layui-input-inline
-                    input.layui-input(type="text",value="未使用代金券",readonly=true)
+                    input.layui-input(type="text",value="未使用代金券")
             .layui-form-item
                 label.layui-form-label 交易状态
                 .layui-input-inline
-                    input.layui-input(type="text",value="成功",readonly=true)
-        form#inputmoney-detail-info.layui-form(style="display: none;font-size: 12px;padding:20px 10px;")
-            .layui-form-item
-                label.layui-form-label 充值时间
-                .layui-input-inline
-                    input.layui-input(type="text",readonly=true)
-            .layui-form-item
-                label.layui-form-label 流水号
-                .layui-input-inline
-                    input.layui-input(type="text",readonly=true)
-            .layui-form-item
-                label.layui-form-label 充值金额
-                .layui-input-inline
-                    input.layui-input(type="text",readonly=true)
-            .layui-form-item
-                label.layui-form-label 充值状态
-                .layui-input-inline
-                    input.layui-input(type="text",value='成功',readonly=true)
+                    input.layui-input(type="text",value="成功")
         .my-baseInfo-wrapper
             .my-baseInfo-main
                 .show-all-balance-area
@@ -97,7 +83,7 @@ block centerContent
                         li.th.w20 时间
                         li.th.w20 金额
                     ul.tr-td.clearfix(v-for="item in queueList")
-                        li.th.w20(v-text="item.order_sn")
+                        li.th.w20(v-text="item.order_sn",@click="getMyRecommend(item.order_sn)")
                         li.th.w40(v-text="item.note")
                         li.th.w20(v-text="item.create_time")
                         li.th.w20(v-text="item.amount")
