--- a/src/assets/myAccount.pug
+++ b/src/assets/myAccount.pug
@@ -28,31 +28,31 @@ block centerContent
             .layui-form-item
                 label.layui-form-label 名称
                 .layui-input-inline
-                    input.layui-input(type="text",:value="userObj.type==3?'生活日用品商品包':'充值'")
+                    input.layui-input(type="text",:value="orderObj.type==3?'生活日用品商品包':'充值'",readonly)
             .layui-form-item
                 label.layui-form-label 订单号
                 .layui-input-inline
-                    input.layui-input(type="text",:value="orderObj.order_id")
+                    input.layui-input(type="text",:value="orderObj.order_id",readonly)
             .layui-form-item
                 label.layui-form-label 时间
                 .layui-input-inline
-                    input.layui-input(type="text",:value="filterTime(orderObj.time)")
+                    input.layui-input(type="text",:value="filterTime(orderObj.time)",readonly)
             .layui-form-item
                 label.layui-form-label 金额
                 .layui-input-inline
-                    input.layui-input(type="text",:value="orderObj.money")
+                    input.layui-input(type="text",:value="orderObj.money",readonly)
             .layui-form-item
                 label.layui-form-label 交易流水
                 .layui-input-inline
-                    input.layui-input(type="text",:value="trade_no||''")
-            .layui-form-item(style="display:none;",v-show="userObj.type==3")
+                    input.layui-input(type="text",:value="orderObj.trade_no||''",readonly)
+            .layui-form-item(style="display:none;",v-show="orderObj.type==3")
                 label.layui-form-label 使用代金券
                 .layui-input-inline
-                    input.layui-input(type="text",value="未使用代金券")
+                    input.layui-input(type="text",value="未使用代金券",readonly)
             .layui-form-item
                 label.layui-form-label 交易状态
                 .layui-input-inline
-                    input.layui-input(type="text",value="成功")
+                    input.layui-input(type="text",value="成功",readonly)
         .my-baseInfo-wrapper
             .my-baseInfo-main
                 .show-all-balance-area
