--- a/src/assets/convertList.pug
+++ b/src/assets/convertList.pug
@@ -9,7 +9,7 @@ block centerContent
                     ul.tr-th.clearfix
                         li.th.w10 序号
                         li.th.w20 订单
-                        li.th.w30 抵扣债券金额
+                        li.th.w30 抵扣积分
                         li.th.w20 兑换金额
                         li.th.w20 状态
                     ul.tr-td.clearfix(v-for="(item,index) in queueList")
