--- a/src/assets/personCenter.pug
+++ b/src/assets/personCenter.pug
@@ -30,7 +30,7 @@ block content
                         dl
                             dt
                                 span
-                                | 队列模式
+                                | 消费返利
                             dd 
                                 a(href="discountOrder.html") 循环消费
                     dd
@@ -43,9 +43,9 @@ block content
                             dd 
                                 a(href="convertlist.html") 兑换记录
                             dd 
-                                a(href="obligationlist.html") 我的债权历史
+                                a(href="obligationlist.html") 我的历史
                             dd 
-                                a(href="obligationlisting.html") 正在进行中的债权
+                                a(href="obligationlisting.html") 进行中的消费返利
                     dd
                         dl
                             dt
