--- a/src/assets/header.pug
+++ b/src/assets/header.pug
@@ -2,6 +2,7 @@ doctype html
 html(style="min-height:100%;overflow:auto;")
     head
         meta(charset='utf-8')
+        title 万店联盟e+便利
         link(href='../css/reset.css',rel='stylesheet')
         link(href='../css/header.css',rel='stylesheet')
         link(href='../css/sign.css',rel='stylesheet')
