--- a/src/assets/pay.pug
+++ b/src/assets/pay.pug
@@ -66,7 +66,7 @@ block content
                     img(src="../img/pay/pay2.png", disabled="", alt="支付宝")
                   |     							
                   span.payment-weak-tip(style="visibility:hidden;")
-                li
+                li(style="display:none;")
                   input#thirdpart_pay_simple(type="radio", @click="checkType=3", name="", data-type="alipay", data-code="", data-bankcode="")
                   |     							
                   label.payment-icon(for="thirdpart_pay_simple", @click="checkType=3")
